# try_again

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_07_28_2157-900e826b70a0_create_table_tasks.py  2025_07_31_1525-7dc06444d798_create_table_users.py  2025_07_31_1533-06b37b4f9e5a_create_tables_tasks.py  2025_08_05_1147-bd06a91f7f9d_create_table_users.py  2025_08_05_1149-d2339331497f_create_table_tasks_and_relation.py
auth/: __init__.py  authorization.py  dependencies.py  jwt.py  security.py
crud/: __init__.py  task.py  user.py
db/: __init__.py  database.py  settings.py
models/: __init__.py  task.py  user.py
router/: __init__.py  task.py  user.py
schemas/: __init__.py  task.py  user.py
